--- a/package.json
+++ b/package.json
@@ -4,17 +4,30 @@
   "description": "Learn Gulp by building an awesome development envirionment.",
   "author": "Edie Ko",
   "license": "ISC",
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "not IE_Mob 11",
+    "maintained node versions"
+  ],
   "scripts": {
     "dev": "gulp dev",
     "build": "gulp build"
   },
   "devDependencies": {
-    "gulp": "^4.0.2"
-  },
-  "dependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
-    "gulp-pug": "^4.0.1"
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-image": "^6.2.1",
+    "gulp-pug": "^4.0.1",
+    "node-sass": "^4.14.1"
+  },
+  "dependencies": {
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-bro": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-webserver": "^0.9.1"
   }
 }
